--- a/AI_Chatbot_using_Python.ipynb
+++ b/AI_Chatbot_using_Python.ipynb
@@ -1450,7 +1450,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this article, we explored transfer learning, with examples of how to use it to develop models for image classification. We used a pre-trained model MobileNet V2 for our case, you can use any pre-trained model you like. I hope you enjoyed it, thank you for reading!"
+        "In this article, In this work I have developed an AI-chatbot which was trained on a small dummy dataset. This can be scaled by utilizing large opensource datasets and deeper nets. I hope you enjoyed it, thank you for reading!"
       ],
       "metadata": {
         "id": "LPB6Am1y7cm1"
